create home page

--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,5 +1,6 @@
+<!DOCTYPE html>
 {% extends "base.html" %}
-
+<html>
 {% block content %}
     <!-- Single Post Section Begin -->
     <section class="single-post spad">
@@ -55,11 +56,12 @@
                             </ul>
                         </div>
                         <div class="single-post__recipe__details__indegradients">
-                            <h5>{{ recipe.ingredients }}</h5>
+                            <h5>Ingredients</h5>
+                            {{ recipe.ingredients|safe }}
                         </div>
                         <div class="single-post__recipe__details__direction">
-                            <h5>{{ recipe.directions }}</h5>
-
+                            <h5>Directions</h5>
+                            {{ recipe.directions|safe }}
                         </div>
                         {% endfor %}
                     </div>
@@ -191,6 +193,6 @@
             </div>
         </div>
     </section>
-
+    </html>
     <!-- Single Post Section End -->
 {% endblock %}
