--- a/templates/blog/include/tags/top_menu.html
+++ b/templates/blog/include/tags/top_menu.html
@@ -1,5 +1,18 @@
-{% for category in list category %}
+{% load mptt_tags %}
 
-    {{ category.name }}
 
-{% endfor %}
+<li class="dropdown">
+    <a href="#">Category</a>
+    <ul class="dropdown__menu">
+        {% recursetree list_category %}
+            <li>
+                <a href="{% url "post_list" node.slug %}">{{ node.name }}</a>
+                {% if not node.is_leaf_node %}
+                    <ul class="children">
+                        {{ children }}
+                    </ul>
+                {% endif %}
+            </li>
+        {% endrecursetree %}
+    </ul>
+</li>
