--- a/templates/blog/include/top_nav.html
+++ b/templates/blog/include/top_nav.html
@@ -1,10 +1,12 @@
 {% load menu_tags %}
+
 <nav class="header__menu">
     <ul>
         <li class="active"><a href="/">Home</a></li>
         {% get_last_posts %}
         {% get_categories %}
+{#        <li><a href="{% url "about" %}">About</a></li>#}
         <li><a href="./about.html">About</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="{% url "contact" %}">Contact</a></li>
     </ul>
 </nav>
