--- a/templates/blog/include/top_nav.html
+++ b/templates/blog/include/top_nav.html
@@ -6,7 +6,7 @@
         {% get_last_posts %}
         {% get_categories %}
 {#        <li><a href="{% url "about" %}">About</a></li>#}
-        <li><a href="./about.html">About</a></li>
+        <li><a href="{% url "about" %}">About</a></li>
         <li><a href="{% url "contact" %}">Contact</a></li>
     </ul>
 </nav>
