--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,11 @@
-{% load static  %}
+{% load static social_tags %}
+
 <footer class="footer">
     <div class="container-fluid">
         <div class="footer__instagram">
             <div class="footer__instagram__avatar">
                 <div class="footer__instagram__avatar--pic">
-                    <img src="{% static 'img/footer/instagram-avatar.jpg' %}"alt="">
+                    <img src="{% static 'img/footer/instagram-avatar.jpg' %}" alt="">
                 </div>
                 <div class="footer__instagram__avatar--text">
                     <h5>@ foodieblog</h5>
@@ -13,22 +14,28 @@
             </div>
             <div class="row">
                 <div class="col-lg-2 col-md-2 col-sm-4 col-6">
-                    <div class="footer__instagram__item set-bg" data-setbg="{% static 'img/footer/ip-1.jpg' %}"alt=""></div>
+                    <div class="footer__instagram__item set-bg" data-setbg="{% static 'img/footer/ip-1.jpg' %}"
+                         alt=""></div>
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-4 col-6">
-                    <div class="footer__instagram__item set-bg" data-setbg="{% static 'img/footer/ip-2.jpg' %}"alt=""></div>
+                    <div class="footer__instagram__item set-bg" data-setbg="{% static 'img/footer/ip-2.jpg' %}"
+                         alt=""></div>
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-4 col-6">
-                    <div class="footer__instagram__item set-bg" data-setbg="{% static 'img/footer/ip-3.jpg' %}"alt=""></div>
+                    <div class="footer__instagram__item set-bg" data-setbg="{% static 'img/footer/ip-3.jpg' %}"
+                         alt=""></div>
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-4 col-6">
-                    <div class="footer__instagram__item set-bg" data-setbg="{% static 'img/footer/ip-4.jpg' %}"alt=""></div>
+                    <div class="footer__instagram__item set-bg" data-setbg="{% static 'img/footer/ip-4.jpg' %}"
+                         alt=""></div>
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-4 col-6">
-                    <div class="footer__instagram__item set-bg" data-setbg="{% static 'img/footer/ip-5.jpg' %}"alt=""></div>
+                    <div class="footer__instagram__item set-bg" data-setbg="{% static 'img/footer/ip-5.jpg' %}"
+                         alt=""></div>
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-4 col-6">
-                    <div class="footer__instagram__item set-bg" data-setbg="{% static 'img/footer/ip-6.jpg' %}"alt=""></div>
+                    <div class="footer__instagram__item set-bg" data-setbg="{% static 'img/footer/ip-6.jpg' %}"
+                         alt=""></div>
                 </div>
             </div>
         </div>
@@ -38,17 +45,16 @@
             <div class="col-lg-12">
                 <div class="footer__text">
                     <div class="footer__logo">
-                        <a href="#"><img src="{% static 'img/logo.png' %}"alt=""></a>
+                        <a href="#"><img src="{% static 'img/logo.png' %}" alt=""></a>
                     </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                         ut<br/> labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus
                         commodo viverra<br/> maecenas accumsan lacus vel facilisis. </p>
                     <div class="footer__social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
-                        <a href="#"><i class="fa fa-youtube-play"></i></a>
-                        <a href="#"><i class="fa fa-envelope-o"></i></a>
+                        {% get_social_links as social_links %}
+                        {% for item in social_links %}
+                            <a href="{{ item.link }}"><img src="{{ item.icon.url }}"></a>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="footer__copyright">
