--- a/templates/blog/include/left_nav.html
+++ b/templates/blog/include/left_nav.html
@@ -1,6 +1,6 @@
-{% load menu_tags social_tags %}
+{% load menu_tags social_tags cache %}
 
-
+{% cache 5000 left_nav %}
 <div class="humberger__menu__overlay"></div>
 <div class="humberger__menu__wrapper">
     <div class="humberger__menu__logo">
@@ -47,3 +47,5 @@
         </form>
     </div>
 </div>
+
+{% endcache %}
