--- a/templates/blog/include/top_nav.html
+++ b/templates/blog/include/top_nav.html
@@ -1,4 +1,6 @@
-{% load menu_tags %}
+{% load menu_tags cache %}
+
+{% cache 5000 top_nav %}
 
 <nav class="header__menu">
     <ul>
@@ -10,3 +12,4 @@
         <li><a href="{% url "contact" %}">Contact</a></li>
     </ul>
 </nav>
+{% endcache %}
